@@ -2,5 +2,6 @@ Changelog for ActiveDirectory.
 
 ActiveDirectory 1.0.0
 =====================
+- Add activedirectory.enabled setting, which defaults to 0. Set to 1 to to turn on modActiveDirectory.
 - Fix issue with extension_packages setting, stop patching login.php file since now fixed in Revo
 - Fix issue with logins and empty passwords
